--- a/kk-view-lua/build.gradle
+++ b/kk-view-lua/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile "kk:core:0.0.5@aar"
     compile "kk:lua:0.0.4@aar"
     compile 'kk:view:0.0.3@aar'
     //compile project(':kk-view')
